--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     
     <header>
         <h1 class="hidden">All about the team</h1>
-        <img src="images/dragon ball super logo.svg" alt="Marvel Logo" id="main-logo">
+        <img src="images/dragon-ball-super-logo.svg" alt="Marvel Logo" id="main-logo">
+
     </header>
+
 
     <main>
         <nav id="character_nav">
@@ -72,7 +74,7 @@
         <h3>All Images &copy; DragonBall Z Super</h3>
     </footer>
 
-    <section class="lightbox" id="lightbox">
+    <div class="lightbox" id="lightbox">
         <a href="" class="lightbox_close">x</a>
         <article>
             <h3 class="lb_heading">
@@ -83,9 +85,9 @@
             <p class="lb_text"> He became a kind and calm kid. Trained, he became a talented martial artist and world's greatest defender.</p>
         </article>
 
-    </section>
+    </div>
 
-    <section class="lightbox" id="lightbox2">
+    <div class="lightbox" id="lightbox2">
         <a href="" class="lightbox_close">x</a>
         <article>
             <h3 class="lb_heading">
@@ -95,9 +97,9 @@
             
         </article>
 
-    </section>
+    </div>
 
-    <section class="lightbox" id="lightbox3">
+    <div class="lightbox" id="lightbox3">
         <a href="" class="lightbox_close">x</a>
         <article>
             <h3 class="lb_heading">
@@ -106,9 +108,9 @@
             <p class="lb_text">Son Goten (孫悟天, Son Goten), or simply Goten in the FUNimation dub, is a fictional character in the manga DragonBall and the anime DragonBall Z and DragonBall GT. Son Goten is the second son of Son Goku and Chi Chi and is Son Gohan's little brother. He is also uncle to Pan. He became a Super Saiyan at the young age of 7, making him the youngest Super Saiyan ever.
         </article>
 
-    </section>
+    </div>
 
-    <section class="lightbox" id="lightbox4">
+    <div class="lightbox" id="lightbox4">
         <a href="" class="lightbox_close">x</a>
         <article>
             <h3 class="lb_heading">
@@ -120,9 +122,9 @@
             </p>
         </article>
 
-    </section>
+    </div>
 
-    <section class="lightbox" id="lightbox5">
+    <div class="lightbox" id="lightbox5">
         <a href="" class="lightbox_close">x</a>
         <article>
             <h3 class="lb_heading">
@@ -131,9 +133,9 @@
             <p class="lb_text">The famous Master Roshi was sought out by a young Goku, and after some... Persuading... He agreed to teach the boy.
         </article>
 
-    </section>
+    </div>
 
-    <section class="lightbox" id="lightbox6">
+    <div class="lightbox" id="lightbox6">
         <a href="" class="lightbox_close">x</a>
         <article>
             <h3 class="lb_heading">
@@ -142,7 +144,7 @@
             <p class="lb_text">The first son of Goku and Chichi and a half-Human, half-Saiyan, Son Gohan held the potential for enormous power. Growing up a scholar, not a warrior like his father, he nevertheless has answered the call to protect Earth multiple times. He is the most powerful non fused warrior in the Dragon Ball Z universe by the end of Dragon Ball Z series. He is the father of Pan and husband to Videl. He is Goten's older brother and Grandson to both Ox King and Bardock, respectively. (Goku and Chichi's fathers)
         </article>
 
-    </section>
+    </div>
 
 
 </body>
